--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="index6.html" class="hover-target">review</a>
         </li>
         <li class="case-study-name">
-          <a href="index4.html" class="hover-target">where to buy?</a>
+          <a href="index4.html" class="hover-target">order</a>
         </li>
       </ul>
       <ul class="case-study-images">
