--- a/index4.html
+++ b/index4.html
@@ -7,122 +7,130 @@
     <title>Contact Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background-color: burlywood;
+            overflow-x: hidden;
+            position: relative;
+        }
         .contact-section {
-            padding: 100px 20px;
+            padding: 50px 20px;
             display: flex;
             justify-content: center;
-            background-image: url("https://wallpapercave.com/wp/wp6751238.jpg");
+            background: #fafafa;
+            position: relative;
         }
         .contact-container {
-            max-width: 1200px;
+            max-width: 800px;
             width: 100%;
         }
-        .row {
-            display: flex;
-            flex-direction: column;
-            gap: 50px;
-        }
         .form {
-            background: rgba(255, 255, 255, 0.9);
+            background: #fff;
             padding: 30px;
-            border-radius: 10px;
+            border-radius: 15px;
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
         }
         .inputBox {
             position: relative;
             margin-bottom: 20px;
         }
-        .inputBox span {
-            position: absolute;
-            top: 50%;
-            left: 10px;
-            transform: translateY(-50%);
+        .inputBox label {
+            display: block;
+            margin-bottom: 5px;
             color: #333;
         }
-        .inputBox input {
+        .inputBox input, .inputBox select {
             width: 100%;
-            padding: 10px 40px;
+            padding: 10px 15px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 10px;
             outline: none;
+            transition: border 0.3s;
+        }
+        .inputBox input:focus, .inputBox select:focus {
+            border-color: #C06B3E;
         }
         input[type="submit"] {
             background: #C06B3E;
             color: #fff;
             border: none;
             padding: 10px 20px;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
-            transition: background 0.2s ease;
+            transition: background 0.3s, transform 0.3s;
+            font-size: 1.2rem;
         }
         input[type="submit"]:hover {
             background: #a5552c;
+            transform: scale(1.1);
         }
-        .map iframe {
-            width: 100%;
-            border-radius: 10px;
-        }
-        footer {
+        .social-icons {
             text-align: center;
-            padding: 20px;
-            background: #333;
-            color: #fff;
+            margin-top: 30px;
         }
-        .logo img {
-            height: 80px;
-        }
-        .social-icons .icon {
+        .social-icons a {
             margin: 0 10px;
-            color: #fff;
-            font-size: 1.5rem;
-            text-decoration: none;
-        }
-        .social-icons .icon:hover {
             color: #C06B3E;
+            font-size: 2rem;
+            transition: transform 0.3s;
+        }
+        .social-icons a:hover {
+            transform: scale(1.2);
+        }
+        .ice-cream {
+            position: fixed;
+            top: -100px;
+            left: 50%;
+            animation: fall 8s linear infinite;
+            font-size: 2rem;
+            z-index: 100;
+        }
+        @keyframes fall {
+            0% { transform: translateY(0) rotate(0); left: 10%; }
+            100% { transform: translateY(100vh) rotate(360deg); left: 80%; }
         }
     </style>
 </head>
 <body>
-    <section id="contact" class="contact-section">
+    <div class="contact-section">
         <div class="contact-container">
-            <div class="row">
-                <div class="form">
-                    <form action="">
-                        <div class="inputBox">
-                            <span class="fas fa-user"></span>
-                            <input type="text" placeholder="Name">
-                        </div>
-                        <div class="inputBox">
-                            <span class="fas fa-envelope"></span>
-                            <input type="email" placeholder="Email">
-                        </div>
-                        <div class="inputBox">
-                            <span class="fas fa-phone"></span>
-                            <input type="number" placeholder="Number">
-                        </div>
-                        <div class="inputBox">
-                            <span class="fas fa-comment"></span>
-                            <input type="text" placeholder="Message">
-                        </div>
-                        <input type="submit" value="Send">
-                    </form>
+            <div class="ice-cream">&#127848;</div>
+                <div class="inputBox">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" placeholder="Enter your name" required>
                 </div>
-                <div class="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d518415200.9877717!2d110.77704038455403!3d-7.55380290905223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a145d4a5aebf1%3A0xa42193c94935b134!2sUniversitas%20Pignatelli%20Triputra%20(UPITRA)!5e0!3m2!1sid!2sid!4v1719218329480!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="inputBox">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
                 </div>
+                <div class="inputBox">
+                    <label for="address">Address</label>
+                    <input type="text" id="address" placeholder="Enter your address" required>
+                </div>
+                <div class="inputBox">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" placeholder="Enter your phone number" required>
+                </div>
+                <div class="inputBox">
+                    <label for="order">Order</label>
+                    <select id="order" required>
+                        <option value="">Select a product</option>
+                        <option value="product1">Product 1</option>
+                        <option value="product2">Product 2</option>
+                        <option value="product3">Product 3</option>
+                    </select>
+                </div>
+                <input type="submit" value="Submit">
+            </form>
+            <div class="social-icons">
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
-    </section>
-    <footer>
-        <div class="logo">
-            <img src="https://tse4.mm.bing.net/th?id=OIP.7h_NkAbcbv0hI19FsmUXOgHaHa&pid=Api&P=0&h=220" alt="Coffee Logo">
-        </div>
-        <div class="social-icons">
-            <a href="#" class="icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="icon"><i class="fab fa-tiktok"></i></a>
-            <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="icon"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-    </footer>
+    </div>
 </body>
 </html>
