--- a/index5.html
+++ b/index5.html
@@ -1,29 +1,87 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Enhanced Footer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-image: url("https://images2.alphacoders.com/153/thumb-1920-153792.jpg");
+            background-color: #f3f4f6;
+        }
+        .footer {
+            position: relative;
+            background: #1f2937;
+            color: #d1d5db;
+            padding: 40px 20px;
+            overflow: hidden;
+        }
+        .footer h2 {
+            font-size: 1.25rem;
+            margin-bottom: 1rem;
+            color: #f3f4f6;
+        }
+        .footer ul li a {
+            color: #9ca3af;
+            transition: color 0.3s;
+        }
+        .footer ul li a:hover {
+            color: #fbbf24;
+        }
+        .footer .social-icons a {
+            color: #d1d5db;
+            font-size: 1.5rem;
+            margin-right: 10px;
+            transition: transform 0.3s;
+        }
+        .footer .social-icons a:hover {
+            color: #fbbf24;
+            transform: translateY(-5px);
+        }
+        .falling-ice-cream {
+            position: absolute;
+            top: -100px;
+            left: 50%;
+            width: 30px;
+            height: 30px;
+            background-image: url('https://cdn-icons-png.flaticon.com/512/1046/1046784.png');
+            background-size: cover;
+            animation: fall 8s linear infinite;
+            opacity: 0.8;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(-100px) rotate(0deg);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) rotate(360deg);
+                opacity: 0;
+            }
         }
     </style>
 </head>
-<body class="bg-cream text-brown">
-    <div class="bg-brown text-white py-4">
-        <div class="container mx-auto flex justify-between items-center">
-            <div class="text-lg font-bold">JOIN OUR MAILING LIST</div>
-            <div class="flex items-center">
-                <input type="email" placeholder="Email Address" class="p-2 rounded-l-md">
-                <button class="bg-gold text-white p-2 rounded-r-md">GET NEW DEALS</button>
-            </div>
+<body>
+    <body class="bg-cream text-brown">
+        <!-- Map Section -->
+        <div class="relative w-full h-96 overflow-hidden mb-12">
+            <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509377!2d144.95565111547906!3d-37.81731397975159!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf341d5c6b36ec0f5!2sQueen%20Victoria%20Market!5e0!3m2!1sen!2sau!4v1639607390101!5m2!1sen!2sau" 
+                width="100%" 
+                height="100%" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+            </iframe>
         </div>
-    </div>
-    <div class="container mx-auto py-12">
-        <div class="grid grid-cols-4 gap-8">
+    <footer class="footer">
+        <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
             <div>
-                <h2 class="font-bold mb-4">MY ACCOUNT</h2>
+                <h2>MY ACCOUNT</h2>
                 <ul>
                     <li class="mb-2"><a href="#" class="hover:underline">Online Ordering Login</a></li>
                     <li class="mb-2"><a href="#" class="hover:underline">Online Order Details</a></li>
@@ -31,7 +89,7 @@
                 </ul>
             </div>
             <div>
-                <h2 class="font-bold mb-4">OUR COMPANY</h2>
+                <h2>OUR COMPANY</h2>
                 <ul>
                     <li class="mb-2"><a href="#" class="hover:underline">Employment</a></li>
                     <li class="mb-2"><a href="#" class="hover:underline">Safe Food Practices</a></li>
@@ -41,40 +99,27 @@
                 </ul>
             </div>
             <div>
-                <h2 class="font-bold mb-4">SUPPORT</h2>
+                <h2>SUPPORT</h2>
                 <ul>
                     <li class="mb-2"><a href="#" class="hover:underline">Contact Us</a></li>
                     <li class="mb-2"><a href="#" class="hover:underline">FAQs</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">Nutrition Info</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">Track Your Shipment</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">Shipping Info</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">Gift Card Support</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">Accessibility</a></li>
-                    <li class="mb-2"><a href="#" class="hover:underline">MRFs</a></li>
+                    <li class="mb-2"><a href="#" class="hover:underline">Help Center</a></li>
                 </ul>
             </div>
             <div>
-                <h2 class="font-bold mb-4">SOCIAL</h2>
-                <div class="flex space-x-4 mb-4">
-                    <a href="#" class="text-brown"><i class="fab fa-facebook-square"></i></a>
-                    <a href="#" class="text-brown"><i class="fab fa-twitter"></i></a>
-                    <a href="#" class="text-brown"><i class="fab fa-pinterest"></i></a>
-                    <a href="#" class="text-brown"><i class="fab fa-instagram"></i></a>
-                </div>
-                <div>
-                    <h2 class="font-bold mb-2">FOR ASSISTANCE CALL</h2>
-                    <p>(800) 721-3323</p>
+                <h2>FOLLOW US</h2>
+                <div class="social-icons flex">
+                    <a href="#" class="hover:text-yellow-400"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="hover:text-yellow-400"><i class="fab fa-twitter"></i></a>
+                    <a href="#" class="hover:text-yellow-400"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="hover:text-yellow-400"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
-        <div class="border-t border-gold mt-8 pt-4 text-center text-sm">
-            <p class="mb-2">
-                <a href="#" class="hover:underline">Privacy Policy</a> | 
-                <a href="#" class="hover:underline">Sitemap</a> | 
-                Made in Cincinnati, Ohio
-            </p>
-            <p>©2024 Graeter's Ice Cream Co.</p>
-        </div>
-    </div>
+        <div class="falling-ice-cream" style="animation-delay: 0s; left: 20%;"></div>
+        <div class="falling-ice-cream" style="animation-delay: 2s; left: 60%;"></div>
+        <div class="falling-ice-cream" style="animation-delay: 4s; left: 80%;"></div>
+        <div class="falling-ice-cream" style="animation-delay: 6s; left: 40%;"></div>
+    </footer>
 </body>
 </html>
