--- a/index6.html
+++ b/index6.html
@@ -15,7 +15,7 @@
         .review-section {
             padding: 50px;
             background-image: url("https://images4.alphacoders.com/212/212256.jpg");
-            color: #333;
+            color: #fff;
             text-align: center;
             animation: fadeIn 1.5s;
         }
@@ -45,6 +45,21 @@
         .review-form input:focus, .review-form textarea:focus {
             transform: scale(1.05);
         }
+        .star-rating {
+            display: flex;
+            gap: 5px;
+            margin-bottom: 15px;
+            cursor: pointer;
+        }
+        .star-rating i {
+            font-size: 2rem;
+            color: #ffcc00;
+            transition: transform 0.2s;
+        }
+        .star-rating i:hover, .star-rating i.selected {
+            transform: scale(1.2);
+            color: #ffdd44;
+        }
         .review-form button {
             background-color: #c06b3e;
             color: #fff;
@@ -73,6 +88,7 @@
             border-bottom: 1px solid #ddd;
             margin-bottom: 10px;
             padding-bottom: 10px;
+            animation: slideIn 1s;
         }
         .review:last-child {
             border-bottom: none;
@@ -85,39 +101,75 @@
             to { opacity: 1; }
         }
         @keyframes slideIn {
-            from { transform: translateY(30px); opacity: 0; }
+            from { transform: translateY(20px); opacity: 0; }
             to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
 <body>
-    <section class="review-section">
+    <div class="review-section">
         <h2>Customer Reviews</h2>
         <div class="review-form">
-            <input type="text" id="name" placeholder="Your Name" required>
-            <textarea id="message" placeholder="Your Review" rows="4" required></textarea>
+            <input type="text" id="customer-name" placeholder="Your Name" required>
+            <textarea id="review-text" placeholder="Write your review here..." rows="4" required></textarea>
+            <div class="star-rating" id="star-rating">
+                <i class="far fa-star" data-value="1"></i>
+                <i class="far fa-star" data-value="2"></i>
+                <i class="far fa-star" data-value="3"></i>
+                <i class="far fa-star" data-value="4"></i>
+                <i class="far fa-star" data-value="5"></i>
+            </div>
             <button onclick="submitReview()">Submit Review</button>
         </div>
-        <div id="reviews" class="reviews-display">
-            <h3>What others are saying:</h3>
-            <div id="review-list"></div>
+        <div class="reviews-display" id="reviews-display">
+            <h3>Customer Reviews</h3>
         </div>
-    </section>
-
+    </div>
+    
     <script>
+        const stars = document.querySelectorAll('.star-rating i');
+        let selectedRating = 0;
+
+        stars.forEach(star => {
+            star.addEventListener('click', () => {
+                selectedRating = parseInt(star.getAttribute('data-value'));
+                stars.forEach(s => s.classList.remove('selected'));
+                for (let i = 0; i < selectedRating; i++) {
+                    stars[i].classList.add('selected');
+                }
+            });
+        });
+
         function submitReview() {
-            const name = document.getElementById('name').value;
-            const message = document.getElementById('message').value;
-            if (name && message) {
-                const reviewList = document.getElementById('review-list');
-                const review = document.createElement('div');
-                review.classList.add('review');
-                review.innerHTML = `<p><strong>${name}</strong></p><p>${message}</p>`;
-                reviewList.prepend(review);
-                document.getElementById('name').value = '';
-                document.getElementById('message').value = '';
+            const name = document.getElementById('customer-name').value.trim();
+            const reviewText = document.getElementById('review-text').value.trim();
+            
+            if (name && reviewText && selectedRating > 0) {
+                const reviewSection = document.getElementById('reviews-display');
+
+                const reviewDiv = document.createElement('div');
+                reviewDiv.classList.add('review');
+                reviewDiv.innerHTML = `
+                    <p><strong>${name}</strong> - ${selectedRating} <i class="fas fa-star" style="color: #ffcc00;"></i></p>
+                    <p>${reviewText}</p>
+                `;
+
+                if (selectedRating === 5) {
+                    const praise = document.createElement('p');
+                    praise.style.color = '#28a745';
+                    praise.style.fontWeight = 'bold';
+                    praise.innerText = 'Thank you for the perfect rating! We really appreciate it!';
+                    reviewDiv.appendChild(praise);
+                }
+
+                reviewSection.appendChild(reviewDiv);
+
+                document.getElementById('customer-name').value = '';
+                document.getElementById('review-text').value = '';
+                stars.forEach(star => star.classList.remove('selected'));
+                selectedRating = 0;
             } else {
-                alert('Please fill out both fields before submitting.');
+                alert('Please fill in all fields and select a rating!');
             }
         }
     </script>
